test/corpus/linkables_anchor.txt
================================================================================
anchor-00: Standalone anchor
================================================================================
[word]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      description: (description
        (word)))
    (paragraph_break)))

================================================================================
anchor-01: Markup inside anchor description
================================================================================
[*word /word/*]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      description: (description
        (bold
          (bold_open)
          (word)
          (whitespace)
          (italic
            (italic_open)
            (word)
            (italic_close))
          (bold_close))))
    (paragraph_break)))

================================================================================
anchor-02: Verbatim > anchor
================================================================================
`[word]`

[`word]`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (punctuation)
      (verbatim_close))
    (paragraph_break))
  (paragraph
    (anchor
      description: (description
        (verbatim
          (verbatim_open)
          (word)
          (punctuation)
          (verbatim_close))))
    (paragraph_break)))

================================================================================
anchor-03: free-form verbatim > anchor
================================================================================
[`|word]|`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      description: (description
        (verbatim
          (verbatim_open)
          (free_form_open)
          (word)
          (punctuation)
          (free_form_close)
          (verbatim_close))))
    (paragraph_break)))

================================================================================
anchor-04: reset attached modifier after destination
================================================================================
[*word] *word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      description: (description
        (open_conflict
          (bold_open)
          (word))))
    (whitespace)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (paragraph_break)))

================================================================================
anchor-05: anchor after unclosed verbatim
================================================================================
`[word]
--------------------------------------------------------------------------------
(document
  (paragraph
    (open_conflict
      (verbatim_open)
      (anchor
        description: (description
            (word))))
    (paragraph_break)))

================================================================================
anchor-06: non-verbatim precedence
================================================================================
[mention *Array ]*]

[mention *|Array ]|*]
--------------------------------------------------------------------------------
; NOTE: *Array []* is just error
(document
  (paragraph
    (anchor
      description: (description
        (word)
        (whitespace)
        (open_conflict
          (bold_open)
          (word)
          (whitespace))))
    (open_conflict
      (bold_open)
      (punctuation))
    (paragraph_break))
  (paragraph
    (anchor
      description: (description
        (word)
        (whitespace)
        (bold
          (bold_open)
          (free_form_open)
          (word)
          (whitespace)
          (punctuation)
          (free_form_close)
          (bold_close))))
    (paragraph_break)))

================================================================================
anchor-07: verbatim precedence
================================================================================
[mention `Array []`]

[mention `|Array []|`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      description: (description
        (word)
        (whitespace)
        (verbatim
          (verbatim_open)
          (word)
          (whitespace)
          (punctuation)
          (punctuation)
          (verbatim_close))))
    (paragraph_break))
  (paragraph
    (anchor
      description: (description
        (word)
        (whitespace)
        (verbatim
          (verbatim_open)
          (free_form_open)
          (word)
          (whitespace)
          (punctuation)
          (punctuation)
          (free_form_close)
          (verbatim_close))))
    (paragraph_break)))

================================================================================
anchor-08: closing modifier without opening modifier (1)
================================================================================
*word]*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (punctuation)
      (bold_close))
    (paragraph_break)))

================================================================================
anchor-09: closing modifier without opening modifier (2)
================================================================================
[mention `]`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      description: (description
        (word)
        (whitespace)
        (verbatim
          (verbatim_open)
          (punctuation)
          (verbatim_close))))
    (paragraph_break)))

; vim:ts=2:sw=2:
